@@ -76,12 +76,11 @@ function popup_art(url) {
         if (window.focus) {newwindow.focus()}
 }
 
-// In-line album editing helper function
-function checkAlbum(song) {
-	if ($('album_select_'+song).options[$('album_select_'+song).selectedIndex].value == -1) {
-		$('album_select_song_'+song).innerHTML = '<input type="textbox" name="album_name" value="New Album" />';
+function check_inline_song_edit(type, song) {
+	if ($(type+'_select_'+song).options[$(type+'_select_'+song).selectedIndex].value == -1) {
+		$(type+'_select_song_'+song).innerHTML = '<input type="textbox" name="'+type+'_name" value="New '+type+'" />';
 	} else {
-		$('album_select_song_'+song).innerHTML = '';
+		$(type+'_select_song_'+song).innerHTML = '';
 	}
 }
 
