@@ -19,20 +19,28 @@
  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+
+$name = 'export_' . $_REQUEST['export_format']; 
+${$name} = ' selected="selected"';
+$name = 'catalog_' . $_REQUEST['export_catalog']; 
+${$name} = ' selected="selected"'; 
+
 show_box_top(_('Export Catalog')); ?>
 <form name="duplicates" action="<?php echo Config::get('web_path'); ?>/admin/export.php?action=export" method="post" enctype="multipart/form-data" >
-<table cellspacing="0" cellpadding="3">
+<table class="tableform" cellspacing="0" cellpadding="3">
 <tr>
 	<td valign="top"><strong><?php echo _('Catalog'); ?>:</strong></td>
 	<td>
-		<select id="export_catalog" name="export_catalog" width="150" style="width: 150px">
-			<option value="">(all)</option>
+		<select id="export_catalog" name="export_catalog">
+			<option value=""><?php echo _('All'); ?></option>
 <?php
 		$catalog_ids = Catalog::get_catalogs(); 
-		foreach ($catalog_ids as $cat_id) {
-			$cat = new Catalog($cat_id);
+		foreach ($catalog_ids as $catalog_id) {
+			$catalog = new Catalog($catalog_id);
+			$current_name = 'catalog_' . $catalog->id; 
+			
 ?>
-			<option value="<?php echo $cat->id; ?>" <?php if($_REQUEST['export_catalog']==$cat->id) echo "selected=\"selected\"" ?>><?php echo $cat->name; ?></option>
+			<option value="<?php echo $catalog->id; ?>"<?php echo ${$current_name}; ?>><?php echo scrub_out($catalog->name); ?></option>
 <?php
 		}
 ?>
@@ -42,8 +50,9 @@ show_box_top(_('Export Catalog')); ?>
 <tr>
 	<td valign="top"><strong><?php echo _('Format'); ?>:</strong></td>
 	<td>
-		<select id="export_format" name="export_format" width="150" style="width: 150px">
-			<option value="itunes" <?php if($_REQUEST['export_format']=='itunes') echo "selected=\"selected\"" ?>>iTunes</option>
+		<select id="export_format" name="export_format">
+			<option value="csv" <?php echo $export_csv; ?>>CSV</option>
+			<option value="itunes" <?php echo $export_itunes; ?>>iTunes</option>
 		</select>
 	</td>
 </tr>
